# height_mapping

height_mapping_core/: CMakeLists.txt  package.xml
height_mapping_core/include/height_mapping_core/: height_mapping_core.h  readme
height_mapping_core/include/height_mapping_core/height_correctors/: readme.md
height_mapping_core/include/height_mapping_core/height_estimators/: readme.md
height_mapping_core/include/height_mapping_core/height_filters/: readme.md
height_mapping_core/include/height_mapping_core/height_map/: readme.md
height_mapping_ros/: CMakeLists.txt  package.xml
height_mapping_ros/config/: global_mapping_node.yaml  height_mapping_node.yaml  sensor_processor_node.yaml
height_mapping_ros/config/include/: heightmap_visualization.yaml
height_mapping_ros/include/common/ros/: PointCloudOps.h  TransformOps.h  frame_ids.h
height_mapping_ros/include/height_mapping/core/: GlobalMapper.h  HeightMapper.h  readme.md
height_mapping_ros/include/height_mapping/ros/: config.h  global_mapping_node.hpp  height_mapping_node.hpp  sensor_processor_node.hpp
height_mapping_ros/launch/: global_mapping.launch.py  height_mapping.launch.py  sensor_processor.launch.py
height_mapping_ros/src/core/: GlobalMapper.cpp  HeightMapper.cpp
height_mapping_ros/src/ros/: global_mapping_node.cpp  height_mapping_node.cpp  readme.md  sensor_processor_node.cpp
