<?xml version="1.0"?>
<package format="3">
  <name>height_mapping_core</name>
  <version>0.0.0</version>
  <description>The height_mapping_core package</description>

  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>grid_map_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
